welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:8: error: value and is not a member of Boolean
  if (vacation & day>=1 and day<=5) {
                        ^alarmClock:11: error: value and is not a member of Boolean
  if ( !vacation & day>=1 and day<=5) {
                          ^alarmClock:17: error: type mismatch;
 found   : Unit
 required: String
  if((!vacation) & day==1) {
  ^